fix: remove `gap` on lower resolutions

--- a/components/common/Header/styles.module.css
+++ b/components/common/Header/styles.module.css
@@ -30,10 +30,6 @@
 }
 
 @media (max-width: 768px) {
-  .container {
-    gap: var(--space-1);
-  }
-
   .logo,
   .tokenWidget,
   .chainSwitcher {
